// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference Traverser - Labels returns reference for a single label 1`] = `
Array [
  Object {
    "rule": "LabelNameContext",
    "start": Object {
      "column": 9,
      "line": 1,
    },
    "stop": Object {
      "column": 13,
      "line": 1,
    },
    "text": "Label",
  },
]
`;

exports[`Reference Traverser - Labels returns references for a multiple labels 1`] = `
Array [
  Object {
    "rule": "LabelNameContext",
    "start": Object {
      "column": 9,
      "line": 1,
    },
    "stop": Object {
      "column": 13,
      "line": 1,
    },
    "text": "Label",
  },
  Object {
    "rule": "LabelNameContext",
    "start": Object {
      "column": 25,
      "line": 1,
    },
    "stop": Object {
      "column": 29,
      "line": 1,
    },
    "text": "Label",
  },
]
`;

exports[`Reference Traverser - Labels returns references for multiple queries 1`] = `
Array [
  Object {
    "rule": "LabelNameContext",
    "start": Object {
      "column": 9,
      "line": 1,
    },
    "stop": Object {
      "column": 13,
      "line": 1,
    },
    "text": "Label",
  },
  Object {
    "rule": "LabelNameContext",
    "start": Object {
      "column": 26,
      "line": 1,
    },
    "stop": Object {
      "column": 30,
      "line": 1,
    },
    "text": "Label",
  },
]
`;
